@@ -1,19 +1,15 @@
 package priv.cqq.apm.core;
 
-import priv.cqq.apm.core.classloader.APMClassLoader;
-import priv.cqq.apm.core.holder.APMClassLoaderHolder;
+import priv.cqq.apm.core.loader.APMClassLoader;
 import priv.cqq.apm.core.resolver.PluginFinder;
-
-import java.lang.invoke.MethodHandles;
+import sun.reflect.Reflection;
 
 public class APMBootstrap {
 
     public static void boot() {
-        // 1. create apm class loader
-        APMClassLoader apmClassLoader = new APMClassLoader(MethodHandles.lookup().lookupClass().getClassLoader(), APMConstants.PLUGIN_FOLDER_ABSOLUTE_PATH);
-        APMClassLoaderHolder.set(apmClassLoader);
+        // 1. initialize apm class loader
+        APMClassLoader.init(Reflection.getCallerClass().getClassLoader(), APMConstants.PLUGIN_FOLDER_ABSOLUTE_PATH);
         // 2. load all plugins
-        PluginFinder.loadPlugins(apmClassLoader);
-        APMClassLoaderHolder.clear();
+        PluginFinder.loadPlugins(APMClassLoader.getInstance());
     }
 }
